--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+
+# ===============================
+# = Company Details
+# ===============================
+company.name = "IPAYAFRICA"
+company.id = "00001"
+api.ver = '2.4'
+
+
 # ===============================
 # = SERVER CONNECTION
 # ===============================
