-add Serial number model, service and repository -modify Repository to include generics values -Include log file class for loggging requests -create method to generate unique reference number

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,9 @@
 # ===============================
 company.name = "IPAYAFRICA"
 company.id = "00001"
-api.ver = '2.4'
-
+api.ver = "2.4"
+payment.type ="cash"
+currency.code="KES"
 
 # ===============================
 # = SERVER CONNECTION
@@ -48,3 +49,9 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# ===============================
+# = errorlog 
+# ===============================
+
+errorLog.filepath="log"
