--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ company.id = "00001"
 api.ver = "2.4"
 payment.type ="cash"
 currency.code="KES"
+ref.counter="refcount"
 
 # ===============================
 # = SERVER CONNECTION
@@ -20,11 +21,11 @@ server.port = 8902
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://localhost:3306/elipapower
+spring.datasource.url = jdbc:mariadb://localhost:3306/elipapower
 # Username and password
 spring.datasource.username = root
 spring.datasource.password = mysql
-
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
@@ -35,6 +36,7 @@ spring.datasource.validationQuery = SELECT 1
 
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager).
+#hibernate.dialect.storage_engine=innodb
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
@@ -42,13 +44,14 @@ spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = create
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MariaDB53Dialect
 
 # ===============================
 # = errorlog 
