--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,20 @@
 # ===============================
 # = Company Details
 # ===============================
-company.name = "IPAYAFRICA"
-company.id = "00001"
-api.ver = "2.4"
-payment.type ="cash"
-currency.code="KES"
-ref.counter="refcount"
+company.name = IPAYAFRICA
+company.id = 00001
+api.ver = 2.44
+payment.type =cash
+currency.code=KES
+ref.counter=refcount
+seq.counter=seqcount
+rev.counter=revcount
 
 # ===============================
-# = SERVER CONNECTION
+# = TOKEN SERVER CONNECTION
 # ===============================
-server.ip = 41.204.194.188
-server.port = 8902
+token.server.ip = 41.204.194.188
+token.server.port = 8902
 # ===============================
 # = DATA SOURCE
 # ===============================
@@ -44,11 +46,13 @@ spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 # Naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming-strategy = com.ipayafrica.elipapower.util.ImprovedNamingStrategy
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MariaDB53Dialect
