fix logfile creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,4 +61,4 @@ spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MariaDB53Dialect
 # = errorlog 
 # ===============================
 
-errorLog.filepath="log"
+errorLog.filepath=log
