-change type field to byte in TokenRequest class -create token request object

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@
 company.name = IPAYAFRICA
 company.id = 00001
 api.ver = 2.44
-payment.type =cash
+payment.value =cash
+payment.key = 2
 currency.code=KES
 ref.counter=refcount
 seq.counter=seqcount
