-include validation for wrong keys in json payload - include parameter for timeout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ payment.value =cash
 payment.key = 2
 currency.code=KES
 timezone.local = Africa/Nairobi
-time.format = "yyyy-MM-dd HH:mm:ss Z
+time.format = yyyy-MM-dd HH:mm:ss Z
+
 ref.counter=refcount
 seq.counter=seqcount
 rev.counter=revcount
@@ -19,6 +20,7 @@ rev.counter=revcount
 # ===============================
 token.server.ip = 41.204.194.188
 token.server.port = 8902
+token.server.timeout = 30000
 # ===============================
 # = DATA SOURCE
 # ===============================
