scheduler to be calledperiodically

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
+#org.quartz.dataSource.myDS.maxConnections = 5
 
 # ===============================
 # = JPA / HIBERNATE
@@ -67,3 +68,33 @@ spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MariaDB53Dialect
 # ===============================
 
 errorLog.filepath=log
+
+#============================================================================
+# Configure Main Scheduler Properties
+#============================================================================
+ 
+org.quartz.scheduler.instanceId = AUTO
+org.quartz.scheduler.makeSchedulerThreadDaemon = true
+ 
+#============================================================================
+# Configure ThreadPool
+#============================================================================
+ 
+org.quartz.threadPool.class = org.quartz.simpl.SimpleThreadPool
+org.quartz.threadPool.makeThreadsDaemons = true
+org.quartz.threadPool.threadCount: 20
+org.quartz.threadPool.threadPriority: 5
+ 
+#============================================================================
+# Configure JobStore
+#============================================================================
+
+org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX 
+org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+org.quartz.jobStore.tablePrefix = QRTZ_
+org.quartz.jobStore.isClustered = false
+org.quartz.jobStore.dataSource = myDs
+org.quartz.jobStore.misfireThreshold = 25000
+
+
+
