add new constants -include status to query to count reversal retries -add key change token request

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@
 # ===============================
 company.name = IPAYAFRICA
 company.id = 00001
-dummy.id = 00200
+dummy.id = 00100
+changekey.id =00700
 api.ver = 2.44
 payment.value =cash
 payment.key = 2
