--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 # ===============================
 company.name = IPAYAFRICA
 company.id = 00001
-dummy.id = 00300
+dummy.id = 00100
 changekey.id =00700
 api.ver = 2.44
 payment.value =cash
@@ -22,7 +22,12 @@ rev.counter=revcount
 # ===============================
 token.server.ip = 41.204.194.188
 token.server.port = 8902
+token.ssl.server.port = 8903
 token.server.timeout = 30000
+keystore.pass = dR%eq4M
+keystore.path = /home/jkikuyu/
+keystore.file = bizswitch-keys
+
 # ===============================
 # = DATA SOURCE
 # ===============================
