fix bad certificate error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 # ===============================
 company.name = IPAYAFRICA
 company.id = 00001
-dummy.id = 00100
+dummy.id = 00300
 changekey.id =00700
 api.ver = 2.44
 payment.value =cash
@@ -25,7 +25,7 @@ token.server.port = 8902
 token.ssl.server.port = 8903
 token.server.timeout = 30000
 keystore.pass = dR%eq4M
-keystore.path = /home/jkikuyu/
+keystore.path = /home/jkikuyu
 keystore.file = bizswitch-keys
 
 # ===============================
